# eww_script_utils

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: hyprland.rs  main.rs  utils.rs
src/network/: access_point.rs  active_connection.rs  device.rs  ip4_config.rs  mod.rs  networkmanager.rs  ping.rs
