[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
clap = { version = "4.4.6", features = ["derive"] }
hyprland = "0.3.12"
json = "0.12.4"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = "1.33.0"
zbus = "3.14.1"
zvariant = { version = "3.15.0", features = ["arrayvec"] }
# json = "0.12.4"
# serde_json = "1.0.107"

