[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.13.0"
async-trait = "0.1.74"
bytemuck = "1.14.0"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
hyprland = "0.3.12"
json = "0.12.4"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
surge-ping = "0.8.0"
tokio = "1.33.0"
zbus = "3.14.1"
zvariant = "3.15.0"
# json = "0.12.4"vscode-file://vscode-app/nix/store/fif77l9kmm94hj96wq7bqxaw6f0gjc2q-vscode-1.83.0/lib/vscode/resources/app/out/vs/code/electron-sandbox/workbench/workbench.html
# serde_json = "1.0.107"

